Add FriendshipId value in GetChatsAsyncResult.
